# libri

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  config.rs  device.rs  format.rs  import.rs  lib.rs  list.rs  main.rs  upload.rs  xml.rs
src/device/: darwin.rs  kobo.rs  list.rs  usb.rs
src/format/: epub.rs
tests/: cli.rs
