[package]
name = "libri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tabwriter = "1"
toml = "0.5"
xml-rs = "0.8.4"
zip = "0.5.13"
