[package]
name = "libri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
chrono = "0.4"
pico-args = "0.4.2"
tabwriter = { version = "1", features = ["ansi_formatting"] }
xml-rs = "0.8.4"
zip = "0.5.13"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "~0.9"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
